// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot — edge-cases > 0·x = 0 1`] = `
"
###### 0·x = 0 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 0, b = 0
[2] infinite-solutions: L'equation 0 = 0 a une infinite de solutions

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré

========== COLLEGE (summarized) ==========
[1] Équation du premier degré

========== COLLEGE (detailed) ==========
[1] Équation du premier degré

========== LYCEE (summarized) ==========
[1] Équation du premier degré

========== LYCEE (detailed) ==========
[1] Équation du premier degré

========== SUPERIEUR (summarized) ==========

========== SUPERIEUR (detailed) ==========
"
`;

exports[`snapshot — edge-cases > 0·x = 5 1`] = `
"
###### 0·x = 5 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 0, b = -5
[2] no-solution: L'equation -5 = 0 n'a pas de solution

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré

========== COLLEGE (summarized) ==========
[1] Équation du premier degré

========== COLLEGE (detailed) ==========
[1] Équation du premier degré

========== LYCEE (summarized) ==========
[1] Équation du premier degré

========== LYCEE (detailed) ==========
[1] Équation du premier degré

========== SUPERIEUR (summarized) ==========

========== SUPERIEUR (detailed) ==========
"
`;

exports[`snapshot — edge-cases > x = x + 1 1`] = `
"
###### x = x + 1 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 0, b = -1
[2] no-solution: L'equation -1 = 0 n'a pas de solution

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait x aux deux membres

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait x aux deux membres

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait x aux deux membres
    │ \\begin{aligned}
    │   x \\textcolor{blue}{- x} &= x + 1 \\textcolor{blue}{- x} \\\\
    │   0 &= 1
    │ \\end{aligned}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   x \\textcolor{blue}{- x} &= 1 \\\\
    │   0 &= 1
    │ \\end{aligned}

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   x &= x + 1 \\\\
    │   0 &= 1
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   x \\textcolor{blue}{- x} &= 1 \\\\
        │   0 &= 1
        │ \\end{aligned}
"
`;

exports[`snapshot — regroupement > 3x − 2 = −5x + 7 1`] = `
"
###### 3x − 2 = −5x + 7 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 8, b = -9
[2] isolate-variable: Solution: x = 9/8

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute 5x aux deux membres
[3] add-both-sides: On ajoute 2 aux deux membres
[4] divide-both-sides: On divise les deux membres par 8
[5] read-solution: Solution : x = \\dfrac{9}{8}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute 5x aux deux membres
[3] On ajoute 2 aux deux membres
[4] On divise les deux membres par 8
[5] Solution : x = \\dfrac{9}{8}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute 5x aux deux membres
    │ \\begin{aligned}
    │   3x - 2 \\textcolor{blue}{+ 5x} &= -5x + 7 \\textcolor{blue}{+ 5x} \\\\
    │   8x - 2 &= 7
    │ \\end{aligned}
[3] On ajoute 2 aux deux membres
    │ \\begin{aligned}
    │   8x - 2 \\textcolor{blue}{+ 2} &= 7 \\textcolor{blue}{+ 2} \\\\
    │   8x &= 9
    │ \\end{aligned}
[4] On divise les deux membres par 8
    │ \\begin{aligned}
    │   \\dfrac{8x}{\\textcolor{blue}{8}} &= \\dfrac{9}{\\textcolor{blue}{8}} \\\\
    │   x &= \\dfrac{9}{8}
    │ \\end{aligned}
[5] Solution : x = \\dfrac{9}{8}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { \\dfrac{9}{8} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   3x \\textcolor{blue}{+ 5x} &= 7 \\textcolor{blue}{+ 2} \\\\
    │   8x &= 9
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{9}{8}
[4] S = { \\dfrac{9}{8} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { \\dfrac{9}{8} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   3x - 2 &= -5x + 7 \\\\
    │   x &= \\dfrac{9}{8}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   3x \\textcolor{blue}{+ 5x} &= 7 \\textcolor{blue}{+ 2} \\\\
        │   8x &= 9
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{9}{8}
    [3] S = { \\dfrac{9}{8} }
"
`;

exports[`snapshot — regroupement > 4x + 1 = 2x + 5 1`] = `
"
###### 4x + 1 = 2x + 5 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 2, b = -4
[2] isolate-variable: Solution: x = 2

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute -2x aux deux membres
[3] subtract-both-sides: On soustrait 1 aux deux membres
[4] divide-both-sides: On divise les deux membres par 2
[5] read-solution: Solution : x = 2

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute -2x aux deux membres
[3] On soustrait 1 aux deux membres
[4] On divise les deux membres par 2
[5] Solution : x = 2

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute -2x aux deux membres
    │ \\begin{aligned}
    │   4x + 1 \\textcolor{blue}{+ -2x} &= 2x + 5 \\textcolor{blue}{+ -2x} \\\\
    │   2x + 1 &= 5
    │ \\end{aligned}
[3] On soustrait 1 aux deux membres
    │ \\begin{aligned}
    │   2x + 1 \\textcolor{blue}{- 1} &= 5 \\textcolor{blue}{- 1} \\\\
    │   2x &= 4
    │ \\end{aligned}
[4] On divise les deux membres par 2
    │ \\begin{aligned}
    │   \\dfrac{2x}{\\textcolor{blue}{2}} &= \\dfrac{4}{\\textcolor{blue}{2}} \\\\
    │   x &= 2
    │ \\end{aligned}
[5] Solution : x = 2

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 2 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   4x \\textcolor{blue}{+ -2x} &= 5 \\textcolor{blue}{- 1} \\\\
    │   2x &= 4
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 2
[4] S = { 2 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 2 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   4x + 1 &= 2x + 5 \\\\
    │   x &= 2
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   4x \\textcolor{blue}{+ -2x} &= 5 \\textcolor{blue}{- 1} \\\\
        │   2x &= 4
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 2
    [3] S = { 2 }
"
`;

exports[`snapshot — regroupement > 5 − 2x = 11 + 3x 1`] = `
"
###### 5 − 2x = 11 + 3x ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = -5, b = -6
[2] isolate-variable: Solution: x = -6/5

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute -3x aux deux membres
[3] subtract-both-sides: On soustrait 5 aux deux membres
[4] divide-both-sides: On divise les deux membres par -5
[5] read-solution: Solution : x = -\\dfrac{6}{5}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute -3x aux deux membres
[3] On soustrait 5 aux deux membres
[4] On divise les deux membres par -5
[5] Solution : x = -\\dfrac{6}{5}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute -3x aux deux membres
    │ \\begin{aligned}
    │   5 - 2x \\textcolor{blue}{+ -3x} &= 11 + 3x \\textcolor{blue}{+ -3x} \\\\
    │   -5x + 5 &= 11
    │ \\end{aligned}
[3] On soustrait 5 aux deux membres
    │ \\begin{aligned}
    │   -5x + 5 \\textcolor{blue}{- 5} &= 11 \\textcolor{blue}{- 5} \\\\
    │   -5x &= 6
    │ \\end{aligned}
[4] On divise les deux membres par -5
    │ \\begin{aligned}
    │   \\dfrac{-5x}{\\textcolor{blue}{-5}} &= \\dfrac{6}{\\textcolor{blue}{-5}} \\\\
    │   x &= -\\dfrac{6}{5}
    │ \\end{aligned}
[5] Solution : x = -\\dfrac{6}{5}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { -\\dfrac{6}{5} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   -2x \\textcolor{blue}{+ -3x} &= 11 \\textcolor{blue}{- 5} \\\\
    │   -5x &= 6
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = -\\dfrac{6}{5}
[4] S = { -\\dfrac{6}{5} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { -\\dfrac{6}{5} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   5 - 2x &= 11 + 3x \\\\
    │   x &= -\\dfrac{6}{5}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   -2x \\textcolor{blue}{+ -3x} &= 11 \\textcolor{blue}{- 5} \\\\
        │   -5x &= 6
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = -\\dfrac{6}{5}
    [3] S = { -\\dfrac{6}{5} }
"
`;

exports[`snapshot — regroupement-fractions > 2x/3 − 1/2 = x/4 + 1 1`] = `
"
###### 2x/3 − 1/2 = x/4 + 1 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 5/12, b = -3/2
[2] isolate-variable: Solution: x = 18/5

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute -\\dfrac{1}{4}x aux deux membres
[3] add-both-sides: On ajoute \\dfrac{1}{2} aux deux membres
[4] divide-both-sides: On divise les deux membres par \\dfrac{5}{12}
[5] read-solution: Solution : x = \\dfrac{18}{5}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute -\\dfrac{1}{4}x aux deux membres
[3] On ajoute \\dfrac{1}{2} aux deux membres
[4] On divise les deux membres par \\dfrac{5}{12}
[5] Solution : x = \\dfrac{18}{5}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute -\\dfrac{1}{4}x aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{2x}{3} - \\dfrac{1}{2} \\textcolor{blue}{+ -\\dfrac{1}{4}x} &= \\dfrac{x}{4} + 1 \\textcolor{blue}{+ -\\dfrac{1}{4}x} \\\\
    │   \\dfrac{5}{12}x - \\dfrac{1}{2} &= 1
    │ \\end{aligned}
[3] On ajoute \\dfrac{1}{2} aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{5}{12}x - \\dfrac{1}{2} \\textcolor{blue}{+ \\dfrac{1}{2}} &= 1 \\textcolor{blue}{+ \\dfrac{1}{2}} \\\\
    │   \\dfrac{5}{12}x &= \\dfrac{3}{2}
    │ \\end{aligned}
[4] On divise les deux membres par \\dfrac{5}{12}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{5}{12}x}{\\textcolor{blue}{\\dfrac{5}{12}}} &= \\dfrac{\\dfrac{3}{2}}{\\textcolor{blue}{\\dfrac{5}{12}}} \\\\
    │   x &= \\dfrac{18}{5}
    │ \\end{aligned}
[5] Solution : x = \\dfrac{18}{5}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { \\dfrac{18}{5} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   \\dfrac{2x}{3} \\textcolor{blue}{+ -\\dfrac{1}{4}x} &= 1 \\textcolor{blue}{+ \\dfrac{1}{2}} \\\\
    │   \\dfrac{5}{12}x &= \\dfrac{3}{2}
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{18}{5}
[4] S = { \\dfrac{18}{5} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { \\dfrac{18}{5} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{2x}{3} - \\dfrac{1}{2} &= \\dfrac{x}{4} + 1 \\\\
    │   x &= \\dfrac{18}{5}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   \\dfrac{2x}{3} \\textcolor{blue}{+ -\\dfrac{1}{4}x} &= 1 \\textcolor{blue}{+ \\dfrac{1}{2}} \\\\
        │   \\dfrac{5}{12}x &= \\dfrac{3}{2}
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{18}{5}
    [3] S = { \\dfrac{18}{5} }
"
`;

exports[`snapshot — regroupement-fractions > x/2 + 1 = x/3 + 2 1`] = `
"
###### x/2 + 1 = x/3 + 2 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 1/6, b = -1
[2] isolate-variable: Solution: x = 6

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute -\\dfrac{1}{3}x aux deux membres
[3] subtract-both-sides: On soustrait 1 aux deux membres
[4] divide-both-sides: On divise les deux membres par \\dfrac{1}{6}
[5] read-solution: Solution : x = 6

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute -\\dfrac{1}{3}x aux deux membres
[3] On soustrait 1 aux deux membres
[4] On divise les deux membres par \\dfrac{1}{6}
[5] Solution : x = 6

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute -\\dfrac{1}{3}x aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{x}{2} + 1 \\textcolor{blue}{+ -\\dfrac{1}{3}x} &= \\dfrac{x}{3} + 2 \\textcolor{blue}{+ -\\dfrac{1}{3}x} \\\\
    │   \\dfrac{1}{6}x + 1 &= 2
    │ \\end{aligned}
[3] On soustrait 1 aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{1}{6}x + 1 \\textcolor{blue}{- 1} &= 2 \\textcolor{blue}{- 1} \\\\
    │   \\dfrac{1}{6}x &= 1
    │ \\end{aligned}
[4] On divise les deux membres par \\dfrac{1}{6}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{1}{6}x}{\\textcolor{blue}{\\dfrac{1}{6}}} &= \\dfrac{1}{\\textcolor{blue}{\\dfrac{1}{6}}} \\\\
    │   x &= 6
    │ \\end{aligned}
[5] Solution : x = 6

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 6 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   \\dfrac{x}{2} \\textcolor{blue}{+ -\\dfrac{1}{3}x} &= 2 \\textcolor{blue}{- 1} \\\\
    │   \\dfrac{1}{6}x &= 1
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 6
[4] S = { 6 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 6 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{x}{2} + 1 &= \\dfrac{x}{3} + 2 \\\\
    │   x &= 6
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   \\dfrac{x}{2} \\textcolor{blue}{+ -\\dfrac{1}{3}x} &= 2 \\textcolor{blue}{- 1} \\\\
        │   \\dfrac{1}{6}x &= 1
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 6
    [3] S = { 6 }
"
`;

exports[`snapshot — simple > 2x + 3 = 7 1`] = `
"
###### 2x + 3 = 7 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 2, b = -4
[2] isolate-variable: Solution: x = 2

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait 3 aux deux membres
[3] divide-both-sides: On divise les deux membres par 2
[4] read-solution: Solution : x = 2

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait 3 aux deux membres
[3] On divise les deux membres par 2
[4] Solution : x = 2

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait 3 aux deux membres
    │ \\begin{aligned}
    │   2x + 3 \\textcolor{blue}{- 3} &= 7 \\textcolor{blue}{- 3} \\\\
    │   2x &= 4
    │ \\end{aligned}
[3] On divise les deux membres par 2
    │ \\begin{aligned}
    │   \\dfrac{2x}{\\textcolor{blue}{2}} &= \\dfrac{4}{\\textcolor{blue}{2}} \\\\
    │   x &= 2
    │ \\end{aligned}
[4] Solution : x = 2

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 2 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   2x &= 7 \\textcolor{blue}{- 3} \\\\
    │   2x &= 4
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 2
[4] S = { 2 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 2 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   2x + 3 &= 7 \\\\
    │   x &= 2
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   2x &= 7 \\textcolor{blue}{- 3} \\\\
        │   2x &= 4
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 2
    [3] S = { 2 }
"
`;

exports[`snapshot — simple > 2x = 4 1`] = `
"
###### 2x = 4 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 2, b = -4
[2] isolate-variable: Solution: x = 2

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] divide-both-sides: On divise les deux membres par 2
[3] read-solution: Solution : x = 2

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On divise les deux membres par 2
[3] Solution : x = 2

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On divise les deux membres par 2
    │ \\begin{aligned}
    │   \\dfrac{2x}{\\textcolor{blue}{2}} &= \\dfrac{4}{\\textcolor{blue}{2}} \\\\
    │   x &= 2
    │ \\end{aligned}
[3] Solution : x = 2

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
[3] S = { 2 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
    │ x = 2
[3] S = { 2 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On termine en simplifiant le coefficient de x
    [2] S = { 2 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   2x &= 4 \\\\
    │   x &= 2
    │ \\end{aligned}
    [1] On termine en simplifiant le coefficient de x
        │ x = 2
    [2] S = { 2 }
"
`;

exports[`snapshot — simple > x = 5 1`] = `
"
###### x = 5 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 1, b = -5
[2] isolate-variable: Solution: x = 5

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] read-solution: Solution : x = 5

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] Solution : x = 5

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] Solution : x = 5

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] S = { 5 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] S = { 5 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] S = { 5 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    [1] S = { 5 }
"
`;

exports[`snapshot — simple-negatifs > 2x − 5 = 1 1`] = `
"
###### 2x − 5 = 1 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 2, b = -6
[2] isolate-variable: Solution: x = 3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute 5 aux deux membres
[3] divide-both-sides: On divise les deux membres par 2
[4] read-solution: Solution : x = 3

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute 5 aux deux membres
[3] On divise les deux membres par 2
[4] Solution : x = 3

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute 5 aux deux membres
    │ \\begin{aligned}
    │   2x - 5 \\textcolor{blue}{+ 5} &= 1 \\textcolor{blue}{+ 5} \\\\
    │   2x &= 6
    │ \\end{aligned}
[3] On divise les deux membres par 2
    │ \\begin{aligned}
    │   \\dfrac{2x}{\\textcolor{blue}{2}} &= \\dfrac{6}{\\textcolor{blue}{2}} \\\\
    │   x &= 3
    │ \\end{aligned}
[4] Solution : x = 3

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 3 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   2x &= 1 \\textcolor{blue}{+ 5} \\\\
    │   2x &= 6
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 3
[4] S = { 3 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 3 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   2x - 5 &= 1 \\\\
    │   x &= 3
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   2x &= 1 \\textcolor{blue}{+ 5} \\\\
        │   2x &= 6
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 3
    [3] S = { 3 }
"
`;

exports[`snapshot — simple-negatifs > 3x = −6 1`] = `
"
###### 3x = −6 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 3, b = 6
[2] isolate-variable: Solution: x = -2

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] divide-both-sides: On divise les deux membres par 3
[3] read-solution: Solution : x = -2

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On divise les deux membres par 3
[3] Solution : x = -2

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On divise les deux membres par 3
    │ \\begin{aligned}
    │   \\dfrac{3x}{\\textcolor{blue}{3}} &= \\dfrac{-6}{\\textcolor{blue}{3}} \\\\
    │   x &= -2
    │ \\end{aligned}
[3] Solution : x = -2

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
[3] S = { -2 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
    │ x = -2
[3] S = { -2 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On termine en simplifiant le coefficient de x
    [2] S = { -2 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   3x &= -6 \\\\
    │   x &= -2
    │ \\end{aligned}
    [1] On termine en simplifiant le coefficient de x
        │ x = -2
    [2] S = { -2 }
"
`;

exports[`snapshot — simple-negatifs > −2x + 4 = 10 1`] = `
"
###### −2x + 4 = 10 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = -2, b = -6
[2] isolate-variable: Solution: x = -3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait 4 aux deux membres
[3] divide-both-sides: On divise les deux membres par -2
[4] read-solution: Solution : x = -3

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait 4 aux deux membres
[3] On divise les deux membres par -2
[4] Solution : x = -3

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait 4 aux deux membres
    │ \\begin{aligned}
    │   -2x + 4 \\textcolor{blue}{- 4} &= 10 \\textcolor{blue}{- 4} \\\\
    │   -2x &= 6
    │ \\end{aligned}
[3] On divise les deux membres par -2
    │ \\begin{aligned}
    │   \\dfrac{-2x}{\\textcolor{blue}{-2}} &= \\dfrac{6}{\\textcolor{blue}{-2}} \\\\
    │   x &= -3
    │ \\end{aligned}
[4] Solution : x = -3

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { -3 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   -2x &= 10 \\textcolor{blue}{- 4} \\\\
    │   -2x &= 6
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = -3
[4] S = { -3 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { -3 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   -2x + 4 &= 10 \\\\
    │   x &= -3
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   -2x &= 10 \\textcolor{blue}{- 4} \\\\
        │   -2x &= 6
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = -3
    [3] S = { -3 }
"
`;

exports[`snapshot — simple-negatifs > −x + 3 = 0 1`] = `
"
###### −x + 3 = 0 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = -1, b = 3
[2] isolate-variable: Solution: x = 3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait 3 aux deux membres
[3] divide-both-sides: On divise les deux membres par -1
[4] read-solution: Solution : x = 3

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait 3 aux deux membres
[3] On divise les deux membres par -1
[4] Solution : x = 3

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait 3 aux deux membres
    │ \\begin{aligned}
    │   -x + 3 \\textcolor{blue}{- 3} &= 0 \\textcolor{blue}{- 3} \\\\
    │   -x &= -3
    │ \\end{aligned}
[3] On divise les deux membres par -1
    │ \\begin{aligned}
    │   \\dfrac{-x}{\\textcolor{blue}{-1}} &= \\dfrac{-3}{\\textcolor{blue}{-1}} \\\\
    │   x &= 3
    │ \\end{aligned}
[4] Solution : x = 3

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 3 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   -x &= 0 \\textcolor{blue}{- 3} \\\\
    │   -x &= -3
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 3
[4] S = { 3 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 3 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   -x + 3 &= 0 \\\\
    │   x &= 3
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   -x &= 0 \\textcolor{blue}{- 3} \\\\
        │   -x &= -3
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 3
    [3] S = { 3 }
"
`;

exports[`snapshot — simples-fractions > 2x/3 = 4/9 1`] = `
"
###### 2x/3 = 4/9 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 2/3, b = -4/9
[2] isolate-variable: Solution: x = 2/3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] divide-both-sides: On divise les deux membres par \\dfrac{2}{3}
[3] read-solution: Solution : x = \\dfrac{2}{3}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On divise les deux membres par \\dfrac{2}{3}
[3] Solution : x = \\dfrac{2}{3}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On divise les deux membres par \\dfrac{2}{3}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{2x}{3}}{\\textcolor{blue}{\\dfrac{2}{3}}} &= \\dfrac{\\dfrac{4}{9}}{\\textcolor{blue}{\\dfrac{2}{3}}} \\\\
    │   x &= \\dfrac{2}{3}
    │ \\end{aligned}
[3] Solution : x = \\dfrac{2}{3}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
[3] S = { \\dfrac{2}{3} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{2}{3}
[3] S = { \\dfrac{2}{3} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On termine en simplifiant le coefficient de x
    [2] S = { \\dfrac{2}{3} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{2x}{3} &= \\dfrac{4}{9} \\\\
    │   x &= \\dfrac{2}{3}
    │ \\end{aligned}
    [1] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{2}{3}
    [2] S = { \\dfrac{2}{3} }
"
`;

exports[`snapshot — simples-fractions > x/2 + 1/3 = 1 1`] = `
"
###### x/2 + 1/3 = 1 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 1/2, b = -2/3
[2] isolate-variable: Solution: x = 4/3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait \\dfrac{1}{3} aux deux membres
[3] divide-both-sides: On divise les deux membres par \\dfrac{1}{2}
[4] read-solution: Solution : x = \\dfrac{4}{3}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{3} aux deux membres
[3] On divise les deux membres par \\dfrac{1}{2}
[4] Solution : x = \\dfrac{4}{3}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{3} aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{x}{2} + \\dfrac{1}{3} \\textcolor{blue}{- \\dfrac{1}{3}} &= 1 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
    │   \\dfrac{1}{2}x &= \\dfrac{2}{3}
    │ \\end{aligned}
[3] On divise les deux membres par \\dfrac{1}{2}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{1}{2}x}{\\textcolor{blue}{\\dfrac{1}{2}}} &= \\dfrac{\\dfrac{2}{3}}{\\textcolor{blue}{\\dfrac{1}{2}}} \\\\
    │   x &= \\dfrac{4}{3}
    │ \\end{aligned}
[4] Solution : x = \\dfrac{4}{3}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { \\dfrac{4}{3} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   \\dfrac{x}{2} &= 1 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
    │   \\dfrac{1}{2}x &= \\dfrac{2}{3}
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{4}{3}
[4] S = { \\dfrac{4}{3} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { \\dfrac{4}{3} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{x}{2} + \\dfrac{1}{3} &= 1 \\\\
    │   x &= \\dfrac{4}{3}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   \\dfrac{x}{2} &= 1 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
        │   \\dfrac{1}{2}x &= \\dfrac{2}{3}
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{4}{3}
    [3] S = { \\dfrac{4}{3} }
"
`;

exports[`snapshot — simples-fractions > x/4 + 1/2 = 3/4 1`] = `
"
###### x/4 + 1/2 = 3/4 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 1/4, b = -1/4
[2] isolate-variable: Solution: x = 1

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait \\dfrac{1}{2} aux deux membres
[3] divide-both-sides: On divise les deux membres par \\dfrac{1}{4}
[4] read-solution: Solution : x = 1

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{2} aux deux membres
[3] On divise les deux membres par \\dfrac{1}{4}
[4] Solution : x = 1

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{2} aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{x}{4} + \\dfrac{1}{2} \\textcolor{blue}{- \\dfrac{1}{2}} &= \\dfrac{3}{4} \\textcolor{blue}{- \\dfrac{1}{2}} \\\\
    │   \\dfrac{1}{4}x &= \\dfrac{1}{4}
    │ \\end{aligned}
[3] On divise les deux membres par \\dfrac{1}{4}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{1}{4}x}{\\textcolor{blue}{\\dfrac{1}{4}}} &= \\dfrac{\\dfrac{1}{4}}{\\textcolor{blue}{\\dfrac{1}{4}}} \\\\
    │   x &= 1
    │ \\end{aligned}
[4] Solution : x = 1

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { 1 }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   \\dfrac{x}{4} &= \\dfrac{3}{4} \\textcolor{blue}{- \\dfrac{1}{2}} \\\\
    │   \\dfrac{1}{4}x &= \\dfrac{1}{4}
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = 1
[4] S = { 1 }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { 1 }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{x}{4} + \\dfrac{1}{2} &= \\dfrac{3}{4} \\\\
    │   x &= 1
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   \\dfrac{x}{4} &= \\dfrac{3}{4} \\textcolor{blue}{- \\dfrac{1}{2}} \\\\
        │   \\dfrac{1}{4}x &= \\dfrac{1}{4}
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = 1
    [3] S = { 1 }
"
`;

exports[`snapshot — simples-fractions-negatifs > x/2 − 1/3 = 1 1`] = `
"
###### x/2 − 1/3 = 1 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = 1/2, b = -4/3
[2] isolate-variable: Solution: x = 8/3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] add-both-sides: On ajoute \\dfrac{1}{3} aux deux membres
[3] divide-both-sides: On divise les deux membres par \\dfrac{1}{2}
[4] read-solution: Solution : x = \\dfrac{8}{3}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On ajoute \\dfrac{1}{3} aux deux membres
[3] On divise les deux membres par \\dfrac{1}{2}
[4] Solution : x = \\dfrac{8}{3}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On ajoute \\dfrac{1}{3} aux deux membres
    │ \\begin{aligned}
    │   \\dfrac{x}{2} - \\dfrac{1}{3} \\textcolor{blue}{+ \\dfrac{1}{3}} &= 1 \\textcolor{blue}{+ \\dfrac{1}{3}} \\\\
    │   \\dfrac{1}{2}x &= \\dfrac{4}{3}
    │ \\end{aligned}
[3] On divise les deux membres par \\dfrac{1}{2}
    │ \\begin{aligned}
    │   \\dfrac{\\dfrac{1}{2}x}{\\textcolor{blue}{\\dfrac{1}{2}}} &= \\dfrac{\\dfrac{4}{3}}{\\textcolor{blue}{\\dfrac{1}{2}}} \\\\
    │   x &= \\dfrac{8}{3}
    │ \\end{aligned}
[4] Solution : x = \\dfrac{8}{3}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { \\dfrac{8}{3} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   \\dfrac{x}{2} &= 1 \\textcolor{blue}{+ \\dfrac{1}{3}} \\\\
    │   \\dfrac{1}{2}x &= \\dfrac{4}{3}
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{8}{3}
[4] S = { \\dfrac{8}{3} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { \\dfrac{8}{3} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   \\dfrac{x}{2} - \\dfrac{1}{3} &= 1 \\\\
    │   x &= \\dfrac{8}{3}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   \\dfrac{x}{2} &= 1 \\textcolor{blue}{+ \\dfrac{1}{3}} \\\\
        │   \\dfrac{1}{2}x &= \\dfrac{4}{3}
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{8}{3}
    [3] S = { \\dfrac{8}{3} }
"
`;

exports[`snapshot — simples-fractions-negatifs > −x/2 + 1/3 = 0 1`] = `
"
###### −x/2 + 1/3 = 0 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = -1/2, b = 1/3
[2] isolate-variable: Solution: x = 2/3

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] subtract-both-sides: On soustrait \\dfrac{1}{3} aux deux membres
[3] divide-both-sides: On divise les deux membres par -\\dfrac{1}{2}
[4] read-solution: Solution : x = \\dfrac{2}{3}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{3} aux deux membres
[3] On divise les deux membres par -\\dfrac{1}{2}
[4] Solution : x = \\dfrac{2}{3}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On soustrait \\dfrac{1}{3} aux deux membres
    │ \\begin{aligned}
    │   -\\dfrac{x}{2} + \\dfrac{1}{3} \\textcolor{blue}{- \\dfrac{1}{3}} &= 0 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
    │   -\\dfrac{1}{2}x &= -\\dfrac{1}{3}
    │ \\end{aligned}
[3] On divise les deux membres par -\\dfrac{1}{2}
    │ \\begin{aligned}
    │   \\dfrac{-\\dfrac{1}{2}x}{\\textcolor{blue}{-\\dfrac{1}{2}}} &= \\dfrac{-\\dfrac{1}{3}}{\\textcolor{blue}{-\\dfrac{1}{2}}} \\\\
    │   x &= \\dfrac{2}{3}
    │ \\end{aligned}
[4] Solution : x = \\dfrac{2}{3}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
[3] On termine en simplifiant le coefficient de x
[4] S = { \\dfrac{2}{3} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On isole les termes en x dans le membre de gauche
    │ \\begin{aligned}
    │   -\\dfrac{x}{2} &= 0 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
    │   -\\dfrac{1}{2}x &= -\\dfrac{1}{3}
    │ \\end{aligned}
[3] On termine en simplifiant le coefficient de x
    │ x = \\dfrac{2}{3}
[4] S = { \\dfrac{2}{3} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On isole les termes en x dans le membre de gauche
    [2] On termine en simplifiant le coefficient de x
    [3] S = { \\dfrac{2}{3} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   -\\dfrac{x}{2} + \\dfrac{1}{3} &= 0 \\\\
    │   x &= \\dfrac{2}{3}
    │ \\end{aligned}
    [1] On isole les termes en x dans le membre de gauche
        │ \\begin{aligned}
        │   -\\dfrac{x}{2} &= 0 \\textcolor{blue}{- \\dfrac{1}{3}} \\\\
        │   -\\dfrac{1}{2}x &= -\\dfrac{1}{3}
        │ \\end{aligned}
    [2] On termine en simplifiant le coefficient de x
        │ x = \\dfrac{2}{3}
    [3] S = { \\dfrac{2}{3} }
"
`;

exports[`snapshot — simples-fractions-negatifs > −x/2 = 1/4 1`] = `
"
###### −x/2 = 1/4 ######

========== TECHNIQUE — solveur algorithmique (solve()) ==========
[1] identify-linear-coefficients: On identifie les coefficients: a = -1/2, b = -1/4
[2] isolate-variable: Solution: x = -1/2

========== TECHNIQUE — pipeline pédagogique (EquationStep) ==========
[1] identify-equation: Équation du premier degré
[2] divide-both-sides: On divise les deux membres par -\\dfrac{1}{2}
[3] read-solution: Solution : x = -\\dfrac{1}{2}

========== COLLEGE (summarized) ==========
[1] Équation du premier degré
[2] On divise les deux membres par -\\dfrac{1}{2}
[3] Solution : x = -\\dfrac{1}{2}

========== COLLEGE (detailed) ==========
[1] Équation du premier degré
[2] On divise les deux membres par -\\dfrac{1}{2}
    │ \\begin{aligned}
    │   \\dfrac{-\\dfrac{x}{2}}{\\textcolor{blue}{-\\dfrac{1}{2}}} &= \\dfrac{\\dfrac{1}{4}}{\\textcolor{blue}{-\\dfrac{1}{2}}} \\\\
    │   x &= -\\dfrac{1}{2}
    │ \\end{aligned}
[3] Solution : x = -\\dfrac{1}{2}

========== LYCEE (summarized) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
[3] S = { -\\dfrac{1}{2} }

========== LYCEE (detailed) ==========
[1] Équation du premier degré
[2] On termine en simplifiant le coefficient de x
    │ x = -\\dfrac{1}{2}
[3] S = { -\\dfrac{1}{2} }

========== SUPERIEUR (summarized) ==========
[1] On isole x
    [1] On termine en simplifiant le coefficient de x
    [2] S = { -\\dfrac{1}{2} }

========== SUPERIEUR (detailed) ==========
[1] On isole x
    │ \\begin{aligned}
    │   -\\dfrac{x}{2} &= \\dfrac{1}{4} \\\\
    │   x &= -\\dfrac{1}{2}
    │ \\end{aligned}
    [1] On termine en simplifiant le coefficient de x
        │ x = -\\dfrac{1}{2}
    [2] S = { -\\dfrac{1}{2} }
"
`;
